<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".StartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/titleBG"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.271"
            app:srcCompat="@drawable/tittle_bg"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/titleOutline"
            android:layout_width="135.25dp"
            android:layout_height="137.85dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toBottomOf="@+id/titleBG"
            app:layout_constraintEnd_toEndOf="@+id/titleBG"
            app:layout_constraintStart_toStartOf="@+id/titleBG"
            app:layout_constraintTop_toTopOf="@+id/titleBG"
            app:srcCompat="@drawable/tittle_frame"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/titlePoint"
            android:layout_width="29dp"
            android:layout_height="29dp"
            app:layout_constraintBottom_toBottomOf="@+id/titleOutline"
            app:layout_constraintEnd_toEndOf="@+id/titleOutline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/titleOutline"
            app:layout_constraintTop_toTopOf="@+id/titleOutline"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/tittle_point"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/tittle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/titleOutline"
            app:layout_constraintEnd_toEndOf="@+id/titleOutline"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/titleOutline"
            app:layout_constraintTop_toTopOf="@+id/titleOutline"
            app:layout_constraintVertical_bias="0.453" />

        <TextView
            android:id="@+id/startTitleDesc"
            style="@style/Theme.LetsTellAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather_light"
            android:text="@string/startTittleDesc"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBG"
            app:layout_constraintVertical_bias="0.242" />

        <TextView
            android:id="@+id/startDesc"
            style="@style/Theme.LetsTellAuth"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather_light"
            android:lines="2"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/startDesc"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTitleDesc"
            app:layout_constraintVertical_bias="0.048" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/Theme.LetsTellAuth"
            android:layout_width="330sp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#828282"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDesc"
            app:layout_constraintVertical_bias="0.073"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/Theme.LetsTellAuth"
            android:layout_width="330sp"
            android:layout_height="40dp"
            android:layout_marginTop="11dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#828282"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/signInButton"
            style="@style/Theme.LetsTellAuth"
            android:layout_width="330sp"
            android:layout_height="50dp"
            android:layout_marginTop="11dp"
            android:text="@string/logButt"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>